chore: alterado classe CepClientConfig para pacote config